Visual bug fix for table overflow

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ body {
 
 #lqueue {
     width: 630px;
+    max-height: 80%;
+    overflow-y: auto;
 }
 
 #hamburgerBtn {
